<resources>
    <string name="app_name">Annomate</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_to_annomate">Welcome to Annomate</string>
    <string name="create_account">Create Account</string>
    <string name="email_address">Email address</string>
    <string name="sign_up">Sign Up</string>
    <string name="camera">Camera</string>
    <string name="calibrate">Calibrate</string>
    <string name="settings">Settings</string>
    <string name="gallery">gallery</string>
    <string name="welcome">Welcome</string>
    <string name="close">close</string>
    <string name="brush">Brush</string>
    <string name="opacity">Opacity</string>
    <string name="done">Done</string>
    <string name="image">image</string>
    <string name="image_title">Image Title</string>
    <string name="notes">Notes</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

    <string name="add_image_details">Add Image Details</string>
    <string name="add_legend_definitions">Add Legend definitions</string>
    <string name="enter_your_legend_here">Enter your legend here</string>
    <string name="legend_image">Legend Image</string>
    <string name="undo">Undo</string>
    <string name="erase">Erase</string>
    <string name="text">Text</string>
    <string name="draw">Draw</string>
    <string name="symbol">Symbol</string>
    <string name="close2">Close</string>
    <string name="save2">Save</string>
    <string name="applogo">appLogo</string>
    <string name="upload">upload</string>
    <string name="ok">OK</string>
    <string name="clear">clear</string>
    <string name="please_input_the_reference_length_and_unit">Please input the reference length and unit</string>
    <string name="objective_lens_magnification">Objective lens magnification</string>
    <string name="reference_measurement">reference measurement</string>
    <string name="ocular_lens_magnification">Ocular lens magnification</string>
    <string name="save_calibration">Save Calibration</string>
    <string name="calculate_scale">Calculate Scale</string>
    <string name="lens_settings">Lens Settings</string>
    <string name="calibration_name">Calibration Name</string>
    <string name="str_cancel">Cancel</string>
    <string name="calibration_identifier">Calibration identifier</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="login_email">Login email</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="select_scalebar_colour">Select Scalebar colour</string>
    <string name="description">Description</string>
    <string name="saved_location_with_image">Saved Location with Image</string>
    <string name="compression_level">Compression Level</string>
    <string name="perc">%</string>
    <string name="instruct">instruct</string>
    <string name="initialinstruct"><![CDATA[Please select your reference measurement & press OK]]></string>
    <string name="dFovInstruct"><![CDATA[Please select your reference object & press OK]]></string>
    <string name="threepointinstruct">Please select your last reference object point &amp; press OK</string>
    <string name="onepointinstruct">Please select your last reference point &amp; press OK</string>
    <string name="no_calibrations_saved">No Calibrations Saved!</string>
    <string name="press_continue_return_to_the_home_menu">Press continue return to the Home menu</string>

    <!-- Scale Bar colour Dialog -->
    <string-array name="sbcolour">
        <item>Grey</item>
        <item>Black</item>
        <item>White</item>
    </string-array>

    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="passworderror">Password must have one Uppercase letter, a number at least 8 digits long</string>
    <string name="passworderrorconfirm">Please ensure password is the same in both fields</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_range">Date Range</string>
    <string name="end_date">End Date</string>
    <string name="search_string">Search String</string>
    <string name="start_date2">Start Date</string>
    <string name="clear2">Clear</string>
    <string name="crop">crop</string>
    <string name="select_ratio">Select ratio</string>
    <string name="refObjInstruct"><![CDATA[Please select your reference object & press OK]]></string>
    <string name="leave_blank_if_not_using_a_microscope">Leave blank if not using a microscope</string>
    <string name="aspect">Aspect</string>
    <string name="crop_image">Crop Image</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="click_image_to_view_re_annotate">Click image to View/Re-annotate</string>
    <string name="text_search">Text Search</string>
    <string name="galleryheader">Gallery</string>
    <string name="please_select_an_annotation_option">Please select an Annotation option</string>
    <string name="functxtsymbol">Insert Symbol Mode</string>
    <string name="functxtundo">Undo Mode</string>
    <string name="functxttext">Insert Text Mode</string>
    <string name="funtxtdraw">Erase Drawing Mode</string>
    <string name="functxtdrawmode">Drawing Mode</string>
    <string name="image_notes">Image Notes</string>
    <string name="image_description">Image Description</string>
    <string name="image_location">Image Location</string>
    <string name="image_date">Image Date</string>
    <string name="re_annotate">RE-ANNOTATE</string>
    <string name="continue2">Continue</string>
    <string name="select_calibrate_to_generate_a_calibration_preset">Select Calibrate to generate a calibration preset</string>
    <string name="quickstart_guide">Quickstart Guide</string>
    <string name="apply2">Apply</string>
    <string name="repeat_quickstart_guide">Repeat Quickstart Guide</string>
    <string name="about2">About</string>
    <string name="aboutjaram">Annomate has been created by Team Jaram for our 2018 Industry Project. Annomate is designed as an aid for Scientific image capture and can be used in conjunction with the StableMate Mobile phone adapter for microscopes.</string>
    <string name="about_us_heading">About Us</string>
    <string name="about_annomate_app">About Annomate</string>
    <string name="about_annomate_extended">Annomate provides Users with the ability to capture, annotate and re-annotate images, whilst automatically generating scale bars. Annomate also provides an upload service to the AWS Cloud where image data and the edited and raw images are stored.</string>
    <string name="team_image">Team image</string>
    <string name="our_team_n_anmol_walia_web_designer_n_alex_nguyen_research_and_design_n_jackson_dobell_research_and_documentation_n_marita_fitzgerald_android_developer_n_richard_morton_back_end_developer">Our Team:   Anmol Walia (Web Designer)   Alex Nguyen (Research and Design)   Jackson Dobell (Research and Documentation)   Marita Fitzgerald (Android Developer)   Richard Morton (Back End Developer)</string>
    <string name="team_mem">Our Team:   Anmol Walia (Web Designer)   Alex Nguyen (Research and Design)   Jackson Dobell (Research and Documentation)   Marita Fitzgerald (Android Developer)   Richard Morton (Back End Developer)</string>
    <string name="teammem">Our Team:   Anmol Walia (Web Designer)   Alex Nguyen (Research and Design)   Jackson Dobell (Research and Documentation)   Marita Fitzgerald (Android Developer)   Richard Morton (Back End Developer)</string>
    <string name="annomate_logo">annomate logo</string>
    <string name="instructMeasure">Please measure between 2 points</string>


</resources>
