<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_medium"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/calculate_scale"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/lbl_reference_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/please_input_the_reference_length_and_unit"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/input_unit_chooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:entries="@array/units"></Spinner>

        <EditText
            android:id="@+id/reference_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/reference_measurement"
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.AppCompat" />

    </LinearLayout>

    <TextView
        android:id="@+id/heading2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_medium"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/lens_settings"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/ocularlbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/ocular_lens_magnification"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/ocular_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/magnification"
        android:inputType="numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/objectivelbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/objective_lens_magnification"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/objective_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/magnification"
        android:inputType="numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/heading3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_medium"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/save_calibration"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/namelbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/calibration_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/settingName_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:hint="@string/calibration_identifier"
        android:fontFamily="@font/roboto_medium"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat" />
</LinearLayout>