<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:gravity="fill_vertical|fill_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:adjustViewBounds="false"
            android:contentDescription="@string/annomate_logo"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/my_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:background="@color/jaramGray"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/about_annomate_app"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/about_annomate_extended"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/aboutjaram"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/jaramGray"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/about_us_heading"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/teammem"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>