<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/templogo300"
            android:contentDescription="@string/applogo" />

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_medium"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/welcome_to_annomate"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/login_email"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/pWordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/loginBtn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_done_white_48dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/goToSignUpBtn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_create_white_48dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/sign_up"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>