<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/colorBackground"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="13dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgPreview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/legend_image"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/black_solid_arrow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/image_title"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/descTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/description"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/dateTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/date"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/locationTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/location"
                    android:textColor="@android:color/black" />

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>
</RelativeLayout>